update transaction bug fixed, profile component implemented, merchent added to transaction interface and updated its implementation, smstranlist component created and bases are implemented

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "firebase": "^10.12.4",
+    "capacitor-sms-inbox": "^1.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
