--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor/android": "6.1.1",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.1.1",
+    "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
-    "firebase": "^10.12.4",
     "capacitor-sms-inbox": "^1.1.1",
+    "firebase": "^10.12.4",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
